--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -36,7 +36,9 @@
             {% endif %}
 
 
-              <a href="https://www.yale-nus.edu.sg/about/}}"><button class="btn btn-default btn-lg">About Yale-NUS College</button></a>
+              <a href="https://nicholas-ko-zy.github.io/projects"><button class="btn btn-default btn-lg"><i class="fa fa-bar-chart"></i>Projects</button></a>
+
+              <a href="https://nicholas-ko-zy.github.io/resume"><button class="btn btn-default btn-lg"><i class="fa fa-book"></i>Resume</button></a>
             
 
 
