--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -27,16 +27,15 @@
 
           <div class="hero-buttons">
 
+              <a href="https://nicholas-ko-zy.github.io/blog"><button class="btn btn-default btn-lg"><i class="fa fa-pencil"></i>My Blog</button></a>
+
             {% if site.github_username != '' %}
               <a href="https://github.com/{{ site.github_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-github fa-lg"></i>Github</button></a>
             {% endif %}
 
             {% if site.linkedin_username != '' %}
               <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-linkedin"></i>LinkedIn</button></a>
-            {% endif %}
-
-
-              <a href="https://nicholas-ko-zy.github.io/projects"><button class="btn btn-default btn-lg"><i class="fa fa-bar-chart"></i>Projects</button></a>
+            {% endif %}  
 
               <a href="https://nicholas-ko-zy.github.io/resume"><button class="btn btn-default btn-lg"><i class="fa fa-book"></i>Resume</button></a>
             
