added mathjax to config and inner.html

--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -1,3 +1,19 @@
+<!-- {% include header.html %}
+
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+
+          {{ content }}
+
+        </div>
+      </div>
+    </div>
+  </article>
+
+{% include footer.html %} -->
+
 {% include header.html %}
 
   <article>
@@ -13,3 +29,20 @@
   </article>
 
 {% include footer.html %}
+
+<!-- KaTeX for LaTeX Rendering -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/contrib/auto-render.min.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    renderMathInElement(document.body, {
+      delimiters: [
+        {left: "$$", right: "$$", display: true},
+        {left: "\\[", right: "\\]", display: true},
+        {left: "$", right: "$", display: false},
+        {left: "\\(", right: "\\)", display: false}
+      ]
+    });
+  });
+</script>
