--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+
 {% include header.html %}
 
 <article>
@@ -11,6 +14,3 @@
 </article>
 
 {% include footer.html %}
-
-</body>
-</html>
