--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -1,3 +1,18 @@
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
+<script type="text/javascript">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],  // Inline math
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],  // Block math
+      processEscapes: true
+    }
+  });
+</script>
+
+
 {% include header.html %}
 
 <article>
