--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -1,16 +1,4 @@
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
-
-<script type="text/javascript">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [['$', '$'], ['\\(', '\\)']],  // Inline math
-      displayMath: [['$$', '$$'], ['\\[', '\\]']],  // Block math
-      processEscapes: true
-    }
-  });
-</script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 
 {% include header.html %}
